# deepwiki-open

./: .dockerignore  .env.example  .gitignore  AGENTS.api.md  AGENTS.auth.md  AGENTS.frontend.md  AGENTS.md  AGENTS.reranking.md  AGENTS.streaming.md  AGENTS.themes.md  AGENTS.websocket.md  AGENTS.workflow.md  CLAUDE.md  Dockerfile  Ollama-instruction.md  README.md  builtin.Dockerfile  next.config.ts  package.json  server-wrapper.js  tailwind.config.js
api/: README.md  api.py  azure_anthropic_client.py  azure_ha_client.py  azureai_client.py  builtin_embedder_client.py  chat_providers.py  config.py  data_pipeline.py  deepseek_client.py  google_embedder_client.py  main.py  openai_client.py  openrouter_client.py  prompts.backup.py  prompts.py  pyproject.toml  rag.py  rerank_rag.py  reranker.py  scheduler.py  scope_classifier.py  simple_chat.py  syntax_aware_splitter.py  test_scope_classifier.py  websocket_wiki.py  zhipu_anthropic_client.py  zhipu_openai_client.py
api/auth/: __init__.py  dependencies.py  model_pricing.py  role_store.py  user_store.py  user_store_argon2.py  user_store_pbkdf2.py
api/background/: __init__.py  database.py  job_manager.py  migrate_tokens.py  models.py  token_tracker.py  worker.py
api/config/: azure_ha_endpoints_example.json  embedder.json  generator.json  generator.sample.json  lang.json  model_metadata.json  model_pricing.json  repo.json  reranker.json  roles.sample.json  users.sample.json
api/core/: __init__.py  database.py  schema.sql
api/middleware/: auth.py
api/routes/: __init__.py  jobs.py  statistics.py
api/tools/: embedder.py
(+118 files in other folders)
